<resources>
    <string name="app_name">Lec04x</string>
    <string name="tvCorreo">Correo</string>
    <string name="tvClave">Clave</string>
    <string name="tvTelefono">Telefono</string>
    <string name="btRegistrar">Registrarse</string>
    <string name="btIngresar">Ingresar</string>
    <string name="btCerrar">Cerrar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_storage">Storage</string>
    <string name="menu_realtime">Realtime</string>
    <string name="menu_firestone">Firestone</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logoff">Logoff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
